--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "remix-composable",
   "private": true,
   "sideEffects": false,
   "type": "module",
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@cloudflare/kv-asset-handler": "^0.1.3",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@remix-run/cloudflare": "^2.0.1",
     "@remix-run/css-bundle": "^2.0.1",
     "@remix-run/react": "^2.0.1",
+    "clsx": "^2.0.0",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -26,6 +29,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "eslint": "^8.38.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
     "wrangler": "^3.1.1"
   },
